# mcc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  c_cpp_properties.json
app/: CMakeLists.txt  main.cc
apps/: CMakeLists.txt  engine.cc  perft.cc
include/mcc/: attack_board.hh  board.hh  board2darray.hh  common.hh  coordinate.hh  enums.hh  helpers.hh  mcc.hh  move.hh  move_generator.hh  piece.hh
include/mcc/common/: colour.hh  direction.hh  helpers.hh  piece.hh
src/: CMakeLists.txt  board2darray.cc  mcc.cc  piece.cc
tests/: CMakeLists.txt  board_t.cc
